--- a/maxmsg/views/index.html
+++ b/maxmsg/views/index.html
@@ -56,8 +56,7 @@
         
         socket.on('connect', () => {
             currentID = socket.id;
-            console.log(currentID);
-            console.log(currentRoom);
+            console.log(`sID ${currentID} | user ${currentUser} | room ${currentRoom} | c ${c}`);
 
             // replaced with init
             /*
@@ -67,11 +66,11 @@
             socket.emit('init', {currentUser, currentRoom, c});
         });
 
-        
+        /*
         socket.on("userData", (data) => {
             currentUser = data.user;
         });
-        
+        */
 
         form.addEventListener('submit', (e) => {
             e.preventDefault();
