--- a/maxmsg/views/login.html
+++ b/maxmsg/views/login.html
@@ -139,7 +139,7 @@
         
         <p>
             Max.io is a Node.js/Socket.io application created by Max Cooper (although this is hard to believe). 
-            Max.io provides an easy to use, simplistic chat application that supports 
+            Max.io provides an easy to use, simple chat application that supports 
             private & public chatroom connections that allow you to communicate in real time 
             to other clients via web-socket communication. 
         </p>
